Bug 1725908 - Disallow background color animations on <html> element running on the compositor. r=boris

We don't support background color animations running on the compositor for
nsDisplayCanvasBackgroundColor and nsDisplaySolidColor display items,
<html> element is one of elements using the items.

The reftest in this commit fails on opt builds, asserts an assertion [1]
in the ctor of nsDisplayBackgroundColor on debug builds.

[1] https://searchfox.org/mozilla-central/rev/080e18fa4748456003164f58b0d925b8c3826a67/layout/painting/nsDisplayList.h#4317

Differential Revision: https://phabricator.services.mozilla.com/D135973